Fixing menu spacing on Safari.

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -121,7 +121,7 @@ div#blog-container {
   color:#df0d32;
   text-decoration:none;
   text-transform:uppercase;
-  padding:0 54px;
+  padding:0 50px;
   -webkit-transition:150ms all linear;
   -moz-transition:150ms all linear;
   -o-transition:150ms all linear;
